// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmplifyUi test render Container correctly 1`] = `
<div
  className="Section__container___1Gue_"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render FormContainer correctly 1`] = `
<div
  className="Form__formContainer___cu04J"
/>
`;

exports[`AmplifyUi test render FormRow correctly 1`] = `
<div
  className="Form__formRow___23vw6"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render Input correctly 1`] = `
<input
  className="Input__input___2Sh1s"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render InputRow correctly 1`] = `
<Component
  theme="theme"
>
  <input
    className="Input__input___2Sh1s"
    style={Object {}}
  />
</Component>
`;

exports[`AmplifyUi test render Radio correctly 1`] = `
<input
  className="Input__radio___1oPWf"
  style={Object {}}
  type="radio"
/>
`;

exports[`AmplifyUi test render RadioRow correctly 1`] = `
<Component
  theme="theme"
>
  <Component
    id="_undefined"
    theme="theme"
  />
  <Component
    htmlFor="_undefined"
    theme="theme"
  />
</Component>
`;

exports[`AmplifyUi test render SectionBody correctly 1`] = `
<div
  className="Section__sectionBody___3DCrX"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render SectionFooter correctly 1`] = `
<div
  className="Section__sectionFooter___1QlDn"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render SectionFooterPrimaryContent correctly 1`] = `
<span
  className="Section__sectionFooterPrimaryContent___36Gb1"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render SectionFooterSecondaryContent correctly 1`] = `
<span
  className="Section__sectionFooterPrimaryContent___36Gb1"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render SectionHeader correctly 1`] = `
<div
  className="Section__sectionHeader___13iO4"
  style={Object {}}
>
  <Component
    theme="theme"
  />
</div>
`;

exports[`AmplifyUi test render SectionHeaderContent correctly 1`] = `
<span
  style={Object {}}
/>
`;

exports[`AmplifyUi test render SelectInput correctly 1`] = `
<div
  className="SelectInput__selectInput___1I_W8"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render Strike correctly 1`] = `
<div
  className="Strike__strike___28OW3"
  style={Object {}}
>
  <Component
    theme="theme"
  />
</div>
`;

exports[`AmplifyUi test render StrikeContent correctly 1`] = `
<span
  className="Strike__strikeContent___1hd4F"
/>
`;
